service added haircut

--- a/services.html
+++ b/services.html
@@ -162,7 +162,7 @@
                                 <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
                                     <div class="menu-section">
                                         <h3 class="menu-section-title">
-                                            <a href="/services/haircut-styling.html" class="menu-section-link">
+                                            <a href="/services/haircut-and-styling-hennur-road-bangalore" class="menu-section-link">
                                                 Haircut</a>
                                         </h3>
                                         <div class="menu-item-wrap">
@@ -200,7 +200,7 @@
                                         </p>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/haircut-styling.html"
+                                        <h3 class="menu-section-title"><a href="/services/haircut-and-styling-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Hairstyling</a></h3>
                                         <div class="menu-item-wrap">
@@ -1555,7 +1555,7 @@
                         <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
                             Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
                             class="footer-link-2">Keratin
-                            Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut &
+                            Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore" class="footer-link-2">Haircut &
                             Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
                             MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
                             Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
