--- a/services/haircut-and-styling-hennur-road-bangalore.html
+++ b/services/haircut-and-styling-hennur-road-bangalore.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage
+    <title>Haircut & Hair Styling in Hennur Road, Bangalore | Men & Women
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/hair-colouring-hennur-road-bangalore">
-    <meta content="Professional hair colouring in Hennur Road, Bangalore including global colour, highlights, balayage and root touch-up. Safe, premium and long-lasting results.
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/haircut-and-styling-hennur-road-bangalore">
+    <meta content="Professional haircut and hair styling in Hennur Road, Bangalore for men and women. Trend-based cuts, blow-dry styling and finish by expert stylists.
 " name="description" />
-    <meta content="Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage
+    <meta content="Haircut & Hair Styling in Hennur Road, Bangalore | Men & Women
 " property="og:title" />
-    <meta content="Professional hair colouring in Hennur Road, Bangalore including global colour, highlights, balayage and root touch-up. Safe, premium and long-lasting results.
+    <meta content="Professional haircut and hair styling in Hennur Road, Bangalore for men and women. Trend-based cuts, blow-dry styling and finish by expert stylists.
 " name="description
 " property="og:description" />
-    <meta content="Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage
+    <meta content="Haircut & Hair Styling in Hennur Road, Bangalore | Men & Women
 " property="twitter:title" />
-    <meta content="Professional hair colouring in Hennur Road, Bangalore including global colour, highlights, balayage and root touch-up. Safe, premium and long-lasting results.
+    <meta content="Professional haircut and hair styling in Hennur Road, Bangalore for men and women. Trend-based cuts, blow-dry styling and finish by expert stylists.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage" />
+    <meta property="og:image:alt" content="Haircut & Hair Styling in Hennur Road, Bangalore | Men & Women" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -69,19 +69,19 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore",
-      "name": "Hair Colouring in Hennur Road, Bangalore",
-      "description": "Professional hair colouring services in Hennur Road, Bangalore including global colour, highlights, balayage and grey coverage.",
+      "@id": "https://www.sugarcoatsalon.in/haircut-and-styling-hennur-road-bangalore#webpage",
+      "url": "https://www.sugarcoatsalon.in/haircut-and-styling-hennur-road-bangalore",
+      "name": "Haircut & Hair Styling in Hennur Road, Bangalore",
+      "description": "Professional haircut and hair styling services in Hennur Road, Bangalore for men and women.",
       "isPartOf": {
         "@id": "https://www.sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore#service",
-      "name": "Hair Colouring",
-      "description": "Professional hair colouring service including global colour, highlights, balayage and root touch-up.",
+      "@id": "https://www.sugarcoatsalon.in/haircut-and-styling-hennur-road-bangalore#service",
+      "name": "Haircut and Hair Styling",
+      "description": "Professional haircut and styling services including men’s, women’s and kids haircuts with finishing.",
       "areaServed": {
         "@type": "Place",
         "name": "Hennur Road, Bangalore"
@@ -93,7 +93,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/haircut-and-styling-hennur-road-bangalore#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -105,7 +105,7 @@
           "@type": "ListItem",
           "position": 2,
           "name": "Hair Colouring",
-          "item": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore"
+          "item": "https://www.sugarcoatsalon.in/haircut-and-styling-hennur-road-bangalore"
         }
       ]
     }
@@ -144,53 +144,47 @@
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
-                        <h1 class="heading h3 margin-bottom-60px">Hair Colouring in Hennur Road, Bangalore | Global,
-                            Highlights & Balayage</h1>
+                        <h1 class="heading h3 margin-bottom-60px">Haircut & Hair Styling in Hennur Road, Bangalore</h1>
                         <p class="paragraph medium-paragraph margin-bottom-20px">
-                            Professional hair colouring in Hennur Road, Bangalore including global colour, highlights,
-                            balayage and root touch-up. Safe, premium and long-lasting results.
+                            Looking for a professional haircut and hair styling in Hennur Road, Bangalore? Get
+                            personalised haircuts and styling designed to suit your face shape, hair texture, and
+                            lifestyle.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-colouring-before-after-balayage-hennur-road-bangalore.webp"
-                                        alt="Hair colouring before and after result showing balayage and smooth finish in Hennur Road Bangalore"
+                                        src="/assets/services/haircut-styling-process-blowdry-hennur-road-bangalore.webp"
+                                        alt="Haircut and hair styling process with blow-dry and curling at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Hair Colouring in Hennur Road, Bangalore</h2>
-                                <div class="paragraph medium-paragraph">Looking for expert hair colouring in Hennur
-                                    Road, Bangalore? From natural shades to bold transformations, professional hair
-                                    colouring enhances your look while keeping your hair healthy and vibrant.</div>
-                                <h2 class="heading h4">Professional Hair Colour Services We Offer</h2>
+                                <h2 class="heading h4">Haircut & Styling Services We Offer</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Global hair colour</li>
-                                    <li>Root touch-up</li>
-                                    <li>Highlights & lowlights</li>
-                                    <li>Balayage & ombré</li>
-                                    <li>Grey coverage</li>
+                                    <li>Women’s haircut & styling</li>
+                                    <li>Men’s haircut & styling</li>
+                                    <li>Fringe & bangs</li>
+                                    <li>Kids haircut</li>
+                                    <li>Blow-dry styling</li>
+                                    <li>Ironing & curling</li>
                                 </ul>
-                                <p class="paragraph small-paragraph margin-bottom-20px">
-                                    All colours are selected based on skin tone, hair condition, and lifestyle.
-                                </p>
-                                <h2 class="heading h4">Why Choose Professional Hair Colouring?</h2>
+                                <h2 class="heading h4">Why Professional Haircuts Matter</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Even and long-lasting colour</li>
-                                    <li>Minimal hair damage</li>
-                                    <li>Proper pre- and post-care</li>
-                                    <li>Custom shade consultation</li>
-                                    <li>Salon-grade products</li>
+                                    <li>Enhances face shape</li>
+                                    <li>Improves hair volume & fall</li>
+                                    <li>Easy daily maintenance</li>
+                                    <li>Clean finishing and symmetry</li>
+                                    <li>Long-lasting style shape</li>
                                 </ul>
-                                <h2 class="heading h4">Who Should Opt for Hair Colouring?</h2>
+                                <h2 class="heading h4">Who Should Opt for Professional Hair Styling?</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Grey hair coverage</li>
                                     <li>Style refresh or makeover</li>
-                                    <li>Proper pre- and post-care</li>
-                                    <li>Enhancing natural hair tone</li>
-                                    <li>Fashion or trend-based colouring</li>
+                                    <li>Special occasions & parties</li>
+                                    <li>Office-ready grooming</li>
+                                    <li>Hair volume & shape correction</li>
+                                    <li>Maintaining current looks</li>
                                 </ul>
                             </div>
                         </div>
@@ -198,44 +192,42 @@
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Hair Colouring Process</h2>
+                                <h2 class="heading h4">Haircut & Styling Process</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Step 1: Colour consultation</li>
-                                    <li>Step 2: Strand test & preparation</li>
-                                    <li>Step 3: Colour application</li>
-                                    <li>Step 4: Wash, condition & styling</li>
+                                    <li>Step 1: Hair & face shape consultation</li>
+                                    <li>Step 2: Wash & prep (if required)</li>
+                                    <li>Step 3: Precision haircut</li>
+                                    <li>Step 4: Styling & finishing</li>
                                 </ul>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Duration: 1-3 hours(depends on service)
+                                    Duration: 30-60 minutes(depends on service)<br>Maintenance: Every 4–6 weeks
+                                    recommended
                                 </p>
-                                <h2 class="heading h4">Aftercare Tips for Coloured Hair</h2>
+                                <h2 class="heading h4">Aftercare Tips</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Use colour-safe, sulphate-free shampoo</li>
-                                    <li>Avoid frequent washing</li>
-                                    <li>Deep conditioning regularly</li>
-                                    <li>Hair spa for rejuvenation or colour protection</li>
-                                    <li>Heat protection is essential</li>
+                                    <li>Trim regularly</li>
+                                    <li>Use stylist-recommended products</li>
+                                    <li>Style lightly at home</li>
+                                    <li>Follow styling suggested by stylist</li>
                                 </ul>
-                                <h2 class="heading h4">FAQs – Keratin Treatment in Hennur Road</h2>
-                                <h3 class="paragraph large-paragraph">Is hair colouring safe?</h3>
+                                <h2 class="heading h4">FAQs – Haircut & Styling in Hennur Road</h2>
+                                <h3 class="paragraph large-paragraph">Do you suggest haircut styles?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, when done professionally using quality products and proper techniques.
+                                    Yes, styles are recommended based on face shape, hair type, and maintenance needs.
                                 </p>
-                                <h3 class="paragraph large-paragraph">How long does hair colour last?</h3>
+                                <h3 class="paragraph large-paragraph">Is styling included with haircut?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Depends on the shade and maintenance. Darker shades last longer whereas lighter
-                                    shades and highlights fade over time. Proper home care can increase the duration of
-                                    this.
+                                    Basic styling is included; advanced styling can be added if needed.
                                 </p>
-                                <h3 class="paragraph large-paragraph">Can I colour damaged hair?</h3>
+                                <h3 class="paragraph large-paragraph">Do you do men’s and women’s haircuts?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, after hair assessment and with suitable treatments.
+                                    Yes, professional haircuts for men, women, and kids.
                                 </p>
                             </div>
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-colouring-process-highlights-foil-hennur-road-bangalore.webp"
-                                        alt="Hair colouring process with highlights and foil application at a salon in Hennur Road Bangalore"
+                                        src="/assets/services/mens-hair-styling-process-hennur-road-bangalore.webp"
+                                        alt="Men’s hair styling process with blow-dry and grooming at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
@@ -244,10 +236,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Book Hair Colouring in Hennur Road</h2>
+                                <h2 class="heading h4">Book Haircut & Styling in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Visit our salon near Hennur Road, Bangalore for expert hair colouring services
-                                    tailored to your style.
+                                    Visit our salon near Hennur Road, Bangalore for expert haircut and hair styling
+                                    services.
                                 </p>
                                 <div class="align-button-center">
                                     <!-- <div class="heading h4">Ready to look your absolute best for your
@@ -289,7 +281,8 @@
                     <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
                         Treatment</a><a href="/services/hair-colouring-hennur-road-bangalore"
                         class="footer-link-2">Keratin
-                        Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore" class="footer-link-2">Haircut &
+                        Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
+                        class="footer-link-2">Haircut &
                         Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
                         MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
                         Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
