--- a/blogs/latest-gents-haircuts-trending.html
+++ b/blogs/latest-gents-haircuts-trending.html
@@ -482,7 +482,7 @@
                         <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
                             Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
                             class="footer-link-2">Keratin
-                            Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut &
+                            Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore" class="footer-link-2">Haircut &
                             Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
                             MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
                             Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
