--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
           <div class="footer-block-two"><a class="footer-link">Popular Services</a>
             <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox Treatment</a><a
               href="/services/keratin-treatment-hennur-road-bangalore" class="footer-link-2">Keratin
-              Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut & Styling</a><a
+              Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore" class="footer-link-2">Haircut & Styling</a><a
               href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal MakeUp</a><a
               href="/services/nail-extensions.html" class="footer-link-2">Nails Extensions</a><a
               href="/services/facial-skin-care.html" class="footer-link-2">Facial & Skincare</a>
